Migrate tools from Python to JavaScript
- Convert Image Generator, Video Generator, Voice Transcription, Word Document Editor to Node.js
- Add new Researcher tool
- Update Script Tool Template to JavaScript
- Add node_modules to .gitignore
- Remove Python requirements.txt files and setup scripts

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # /anthony/
 # /[your-name]/
 
+# Cursor plans (local only, not tracked)
+.cursor/plans/
+
 # OS files
 .DS_Store
 Thumbs.db
@@ -54,3 +57,7 @@ tools/Video Generator/generated_videos/*
 # Archive directories (optional - remove these lines to include archives)
 **/zArchive/
 
+
+# Node.js
+node_modules/
+package-lock.json
